package Promotores.Materiales;

public interface MaterialesCasaFactory {
	public Pintura createPintura();
	public Puerta createPuerta();
	public Suelo createSuelo();
	public Ventana createVentana();
}