package Promotores.Materiales;

public interface Pintura {
	public String toString();
}