package Promotores.Materiales;

public class PinturaBarata implements Pintura {
	public String toString() {
		return "Pintura barata";
	}
}