package Promotores.Materiales;

public class PinturaLujosa implements Pintura {
	public String toString() {
		return "Pintura lujosa";
	}
}