package Promotores.Materiales;

public class PinturaModerna implements Pintura {
	public String toString() {
		return "Pintura moderna";
	}
}