package Promotores.Materiales;

public interface Puerta {
	public String toString();
}