package Promotores.Materiales;

public class PuertaBarata implements Puerta {
	public String toString() {
		return "Puerta barata";
	}
}