package Promotores.Materiales;

public class PuertaLujosa implements Puerta {
	public String toString() {
		return "Puerta lujosa";
	}
}