package Promotores.Materiales;

public class PuertaMinimalista implements Puerta {
	public String toString() {
		return "Puerta minimalista";
	}
}