package Promotores.Materiales;

public class PuertaModerna implements Puerta {
	public String toString() {
		return "Puerta moderna";
	}
}