package Promotores.Materiales;

public interface Suelo {
	public String toString();
}