package Promotores.Materiales;

public class SueloBarata implements Suelo {
	public String toString() {
		return "Suelo barata";
	}
}