package Promotores.Materiales;

public class SueloLujosa implements Suelo {
	public String toString() {
		return "Suelo lujosa";
	}
}