package Promotores.Materiales;

public class SueloMinimalista implements Suelo {
	public String toString() {
		return "Suelo minimalista";
	}
}