package Promotores.Materiales;

public class SueloModerna implements Suelo {
	public String toString() {
		return "Suelo moderna";
	}
}