package Promotores.Materiales;

public interface Ventana {
	public String toString();
}