package Promotores.Materiales;

public class VentanaBarata implements Ventana {
	public String toString() {
		return "Ventana barata";
	}
}