package Promotores.Materiales;

public class VentanaLujosa implements Ventana {
	public String toString() {
		return "Ventana lujosa";
	}
}