package Promotores.Materiales;

public class VentanaMinimalista implements Ventana {
	public String toString() {
		return "Ventana minimalista";
	}
}