package Promotores.Materiales;

public class VentanaModerna implements Ventana {
	public String toString() {
		return "Ventana moderna";
	}
}